<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PISE Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to this fun game!</string>
    <string name="bt_start">Start the game!</string>
    <string name="bt_score">View top 5 scores</string>
    <string name="bt_howto">How to play?</string>
    <string name="bt_exit">Exit</string>
    <string name="howto1">In this game you have to control the direction of a moving object. </string>
    <string name="howto2">You can move the object to the left or the right by inclining your phone. It accelerates when it touches a turbo: </string> 
    <string name="howto3">It slows down when it crashes into a tree: </string>
    <string name="howto4">Bumping into stars increases your score: </string>
    <string name="howto5">So keep it rolling! If it stops the game will be over! Good luck!!</string>
	<string name="howto_title">How to play this game?</string>
    <string name="backtomenu">OK, go back to menu</string>
    <string name="gameover">Game over!</string>
    <string name="gameover_good">You are one of the top 5! Congratulations!</string>
    <string name="addcomment">You may add comment to your score here</string>
    <string name="saveandback">Go back to menu</string>
    <string name="date1">date1</string>
    <string name="score1">score1</string>
    <string name="date2">date2</string>
    <string name="score2">score2</string>
    <string name="date3">date3</string>
    <string name="score3">score3</string>
    <string name="date4">date4</string>
    <string name="score4">score4</string>
    <string name="date5">date5</string>
    <string name="score5">score5</string>
    <string name="topscores">Top 5 scores!</string>
    <string name="yourscore">Your score is: </string>
</resources>
