<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/question_marks"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:text="@string/howto_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/howto1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/howto2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/turbo" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/howto3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tree" />

	<TextView
        android:id="@+id/TextView04"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/howto4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

	<ImageView
	    android:id="@+id/imageView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/star" />

	<TextView
        android:id="@+id/TextView05"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/howto5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/backtomenu" />

</LinearLayout>