<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/sad"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/gameover_good"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="28sp" />

	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/addcomment"
	    android:textSize="15sp" >
	 
	        <requestFocus />
	</EditText>
    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveandback" />

</LinearLayout>
